redo the title configuration ui

- move the title configuration UI to the Location page
- use one combobox + one lineedit
- use an enum instead of comparing strings
- clean up the code

BUG:313940
FIXED-IN:4.11